svg collapse fix safari

--- a/static/css/header.css
+++ b/static/css/header.css
@@ -12,6 +12,8 @@ header {
 header svg {
   display: block;
   stroke-width: 7;
+  width: 100%;
+  height: 100%;
 }
 
 .home-link {
